--- a/JokeApp/Views/_ViewImports.cshtml
+++ b/JokeApp/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using JokeApp
+@using JokeApp.Data.Models
 @using JokeApp.Models
+@using JokeApp.Models.CategoryViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
